admin updates started

--- a/Uthando-Templates/admin/index.html
+++ b/Uthando-Templates/admin/index.html
@@ -6,7 +6,7 @@
 		<div id="leftDivWrap">
 			<module name="left"></module>
 			<div class="center">
-				<img src="/Common/images/shaunfreemanlogo.png" />
+				<img src="/images/shaunfreemanlogo.png" />
 			</div>
 		</div>
 		<!-- End menuDivWrap -->
@@ -38,10 +38,10 @@
 		<div id="footerDiv" class="headerDiv">
 			<p>
 				<span>Powered By Uthando</span>
-				<img src="/Common/images/Safari_Web_Badge.png" />
-				<img src="/Common/images/firefox.gif" />
-				<img src="/Common/images/css.png" />
-				<img src="/Common/images/xhtml.png" />
+				<img src="/images/Safari_Web_Badge.png" />
+				<img src="/images/firefox.gif" />
+				<img src="/images/css.png" />
+				<img src="/images/xhtml.png" />
 				<param name="benchmark" />
 			</p>
 		</div>
