--- a/Uthando-Templates/admin/login.html
+++ b/Uthando-Templates/admin/login.html
@@ -20,7 +20,7 @@
 						<h1>Please Enable Javascript</h1>
 					</noscript>
 					<div id="loginSidePanel">
-						<img src="/templates/admin/images/128x128/Lock.png" />
+						<img src="/images/128x128/Lock.png" />
 						<p>Use a valid username and password to gain access to the Administrator Back-end.</p>
 						<p><a href="/">Return to site Home Page</a></p>
 						<div class="both"><!-- --></div>
