added banner ad to design suite template

--- a/Uthando-Templates/designsuite/index.html
+++ b/Uthando-Templates/designsuite/index.html
@@ -32,7 +32,7 @@
 					<div id="newsflash">
 						<div id="nf_top">
 							<div id="nf_bot">
-								<!--News flash-->
+								<module name="banner ad"></module>
 							</div>
 						</div>
 					</div>
